<resources>
    <string name="user_app_name">user module</string>
    <string name="user_plan">Target</string>
    <string name="user_edit_plan">Edit Target</string>
    <string name="user_step">Step</string>
    <string name="user_sleep">Sleep</string>
    <string name="user_calorie">calories</string>

    <string name="user_connect">connected</string>
    <string name="user_disconnect">disconnect</string>
    <string name="user_connect_fail">Trying to reconnect</string>
    <string name="user_connecting">connecting...</string>
    <string name="user_dial">My Dial</string>
    <string name="user_dial_tip">More dials, as you wish></string>
    <string name="user_device_config">Device Management</string>
    <string name="user_find_watch">Find Watch</string>
    <string name="user_ble_call">Bluetooth Call</string>
    <string name="user_ble_camera">Camera</string>
    <string name="user_unit">Unit</string>
    <string name="user_notification">Notification</string>
    <string name="user_about">About Device</string>
    <string name="user_schedule">My Schedule</string>
    <string name="user_auto">Auto Measure</string>
    <string name="user_add_device">Add Device</string>

    <string name="user_measureUnit">Unit Of Measure</string>
    <string name="user_tempUnit">Unit Of Temperature</string>
    <string name="user_metric">Metric</string>
    <string name="user_british">Imperial</string>
    <string name="user_save">Save</string>
    <string name="user_saved">Saved Successfully</string>

    <string name="user_notify">Notification</string>
    <string name="user_notify_tip">To receive application notification messages on the device, enable the message switch</string>
    <string name="user_notify_title">Enable Notifications</string>
    <string name="user_notify_msg">iSmarport Needs To Forward Application Notifications To Remote Smart Devices. Press\"Confirm\"Enter Notification Page To Activate.</string>
    <string name="user_cancel">Cancel</string>
    <string name="user_confirm">Confirm</string>
    v
    <string name="user_account_safe">Accounts and Security</string>
    <string name="user_version">App Version</string>
    <string name="user_help">Help&amp;Feedback</string>
    <string name="user_privacy">User Agreement And Privacy Policy</string>
    <string name="user_logout">Logout</string>
    <string name="user_unbind_tip">unbind</string>
    <string name="user_unbind_message">Are you sure to unbind the current device？</string>

    <string name="user_info">User Information</string>
    <string name="user_set">Account Setting</string>
    <string name="user_head">Head</string>
    <string name="user_name">Name</string>
    <string name="user_sex">Gender</string>
    <string name="user_birthday">Birthday</string>
    <string name="user_height">Height</string>
    <string name="user_weight">Weight</string>
    <string name="user_male">Male</string>
    <string name="user_female">Female</string>
    <string name="user_camera">Camera</string>
    <string name="user_album">Album</string>
    <string name="user_enter_name">Please Enter Your Nickname</string>
    <string name="user_name_long">Nicknames cannot exceed 12 characters</string>
    <string name="user_permission_error_camera">Permission Failed, Can Not Turn On Camera Function</string>
    <string name="user_permission_error_sms">Permission Failed, Can Not Turn On SMS Notify Function</string>
    <string name="user_crop_pic_failed">Image capture failed, please select JPG image!</string>
    <string name="user_account">Account</string>
    <string name="user_change">Change Password</string>
    <string name="user_delete_account">Destruction Account</string>
    <string name="user_logout_tip">Are You Sure You Want To Log Out？</string>
    <string name="user_upload_data">Data Uploading...</string>
    <string name="user_upload_data_success">Data uploaded successfully!</string>
    <string name="user_faq">FAQ</string>
    <string name="user_feedback_hint">Your feedback/question</string>
    <string name="user_send_feedback">Send</string>
    <string name="user_feedback_long">Input is too long</string>
    <string name="user_feedback_empty">Field cannot be empty</string>
    <string name="user_feedback_success">Feedback Success</string>
    <string name="user_guide">User Guide</string>
    <string name="user_service">Keep app active</string>
    <string name="user_huawei">HUAWEI</string>
    <string name="user_oppo">oppo</string>
    <string name="user_vivo">vivo</string>
    <string name="user_lenovo">Lenovo</string>
    <string name="user_oneplus">onePlus</string>
    <string name="user_samsun">Samsun</string>
    <string name="user_mi">MI</string>
    <string name="user_meizu">MEIZU</string>
    <string name="user_serviceTip">In order to improve the stability of the watch connection, it is recommended that you make the following Settings:</string>
    <string name="user_saverBattery">Do not open (power saving mode) :</string>
    <string name="user_batteryContent">If the power-saving mode is turned on, it may cause problems such as unstable Bluetooth connection, abnormal movement trajectory and reduced power distance. It is recommended to turn off the power-saving mode while in use.</string>
    <string name="user_protect">Set the method of background protection::</string>

    <string name="user_search">Search Device</string>
    <string name="user_searching">Searching for device....</string>
    <string name="user_bind">binding...</string>
    <string name="user_no_device">No device found</string>
    <string name="user_pair_success">Pair success</string>
    <string name="user_pair_tip">Your exercise and health data will be synchronized between the watch and the phone through the APP.</string>
    <string name="user_finish">Finish</string>
    <string name="user_understand">Understand</string>
    <string name="user_wear_tip">Wear Tip</string>
    <string name="user_wear_tip_content">In order to accurately measure data and not affect the normal use of APP, please try to wear the watch 1cm away from the wrist bone</string>
    <string name="user_search_tip">Remove the device, charge it to activate, and hold it close to the phone</string>
    <string name="user_search_much">Please select your watch by MAC address</string>
    <string name="user_search_again">Search Again</string>
    <string name="user_again_tip">You can perform the following operations and try again:</string>
    <string name="user_again_advice">· Turn on the bluetooth of the phone again \n· Make sure that the watch is turned on and close to the phone \ N · Click on the device \" Restore factory Settings \"</string>
    <string name="user_stop_bind">Later, it is not bound</string>
    <string name="user_bind_help">Can\'t find the device to add? See the help</string>

    <string name="user_dial_market">Dial Store</string>
    <string name="user_dial_now">Preview</string>
    <string name="user_dial_mine">My Dial</string>
    <string name="user_dial_diy">DIY</string>
    <string name="user_background">Upload Pictures</string>
    <string name="user_crop_fail">Image capture failed, please select JPG image!</string>
    <string name="user_crop_small">Image capture failed, captured picture is too small and the size of the dial does not match!</string>
    <string name="user_send_background">Sending Background...</string>
    <string name="user_send_dial">Sending Dial...</string>
    <string name="user_send_success">Update dial success!</string>
    <string name="user_send_fail">Update dial fail,please try again!</string>
    <string name="user_no_background">Please upload the background first</string>
    <string name="user_no_clock">Please select the dial first</string>

    <string name="user_device_name">Device Model</string>
    <string name="user_device_mac">Mac Address</string>
    <string name="user_device_version">Device Version</string>
    <string name="user_check_update">Check Update</string>

    <string name="user_camera_tip">With Bluetooth enabled, the watch controls the phone\'s camera app to take photos.</string>
    <string name="user_camera_permission_tip">In the process of using, this application requires access to the camera and file read and write permissions, used for remote photography and storage photos. You can go to Settings at any time; Permission Management, choose to close the above permission call to revoke your consent.</string>
    <string name="user_camera_permission_error">Permission failed to open</string>

    <string name="user_deleteTip">Confirm to cancel your account, the account will be successfully cancelled within three days after the confirmation, the account data will be completely deleted and cannot be restored! Perform this operation with caution.</string>
    <string name="user_deleteSuccess">The request is successful.</string>
    <string name="user_deleteNow">The current account is awaiting destruction.</string>

    <string name="user_schedule_empty">The current watch has no schedule, please add a new schedule</string>
    <string name="user_delete_schedule">Delete</string>
    <string name="user_save_schedule">Save</string>
    <string name="user_schedule_info">Schedule Information</string>
    <string name="user_schedule_fall">The number of schedules that can be added to the watch has reached the upper limit</string>
    <string name="user_schedule_add_fail">Failed to add schedule</string>
    <string name="user_schedule_edit_fail">Failed to modify schedule</string>
    <string name="user_schedule_delete_fail">Failed to delete schedule</string>
    <string name="user_schedule_past">A past time point cannot be set as a schedule point</string>
    <string name="user_schedule_same">The selected time point has an existing schedule and cannot be set repeatedly</string>
    <string name="user_schedule_msg">Fill in schedule Details</string>
    <string name="user_today">Today</string>
    <string name="user_time">Time</string>

    <string name="user_auto_measure_tip">After the automatic monitoring function is enabled, the watch will be measured every other frequency time during the effective period</string>
    <string name="user_measure_frequency">Measure Frequency</string>
    <string name="user_valid_time">Effective Time</string>
    <string name="user_start_time">Start Time</string>
    <string name="user_end_time">End Time</string>
    <string name="user_heart">Heart Rate</string>
    <string name="user_blood_pressure">Blood Pressure</string>
    <string name="user_blood_oxygen">Blood Oxygen</string>
    <string name="user_temperature">Temperature</string>
</resources>
