<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:orientation="vertical">


    <include layout="@layout/title"/>

    <TextView
        android:id="@+id/titleBigTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        android:textStyle="bold"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/search_bg"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:id="@+id/revolveIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/search_revolve"/>


        <RelativeLayout
            android:id="@+id/researchRl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/adddevice_failed"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_search_again"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:paddingTop="140dp"/>

        </RelativeLayout>



    </RelativeLayout>



    <TextView
        android:id="@+id/stateTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/user_searching"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/user_gray_text"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/user_search_tip"
        android:textSize="12sp"
        android:layout_marginBottom="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <ListView
            android:id="@+id/deviceList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:listSelector="@android:color/transparent"
            android:scrollbars="none"/>

        <LinearLayout
            android:id="@+id/errorLl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bgColor"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_again_tip"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_again_advice"
                android:textColor="@color/user_gray_text"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/searchHelpTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_bind_help"
                android:textColor="@color/user_gray_text"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/stopTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_stop_bind"
                android:textColor="@color/user_gray_text"
                android:layout_gravity="center"
                android:gravity="bottom"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="80dp"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>