<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:orientation="vertical">


    <include layout="@layout/title"/>

    <TextView
        android:id="@+id/titleBigTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        android:textStyle="bold"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/deviceIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/adddevice_suc_circle"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/user_pair_success"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/user_gray_text"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/user_pair_tip"
        android:textSize="12sp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/finishTv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp"
            android:text="@string/user_finish"
            android:textColor="@android:color/white"
            android:background="@drawable/user_bg_bottom"/>

    </RelativeLayout>

</LinearLayout>