<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.UserSetActivity"
    android:orientation="vertical"
    android:background="@color/bgColor">


    <include layout="@layout/title"/>

    <TextView
        android:id="@+id/titleBigTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:id="@+id/userInfoRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginTop="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@android:color/black"
            android:layout_marginStart="15dp"/>

        <com.szip.blewatch.base.View.CircularImageView
            android:id="@+id/iconIv"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:src="@mipmap/my_head_58"
            app:is_circular="true"/>

        <TextView
            android:id="@+id/nameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/user_name"
            android:layout_toEndOf="@id/iconIv"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:textColor="@android:color/black"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/my_arrow_r_black"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/black"/>

    <RelativeLayout
        android:id="@+id/securityRl"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/user_account_safe"
            android:layout_marginStart="15dp"
            android:textColor="@android:color/black"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:src="@mipmap/my_arrow_r_black"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/white"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/user_version"
            android:layout_marginStart="15dp"
            android:textColor="@android:color/black"/>


        <TextView
            android:id="@+id/versionTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/black"/>


    <RelativeLayout
        android:id="@+id/helpRl"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/user_help"
            android:layout_marginStart="15dp"
            android:textColor="@android:color/black"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:src="@mipmap/my_arrow_r_black"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/black"/>


    <RelativeLayout
        android:id="@+id/privacyRl"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/user_privacy"
            android:layout_marginStart="15dp"
            android:textColor="@android:color/black"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:src="@mipmap/my_arrow_r_black"/>

    </RelativeLayout>


    <TextView
        android:id="@+id/logoutTv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/user_logout"
        android:textColor="@android:color/holo_red_light"
        android:background="@drawable/user_bg_bottom_logout"/>
</LinearLayout>